# number_stuff

./: Cargo.toml  README.md
.cargo/: config.toml
src/utils/: factors.rs  mod.rs  primes.rs  sieve.rs
